<resources>

    <string name="app_name">JobFinder</string>
    <string name="vacancy_search">Поиск вакансий</string>
    <string name="setting_filter">Настройка фильтрации</string>
    <string name="vacancy">Вакансия</string>
    <string name="choosing_industry">Выбор отрасли</string>
    <string name="choosing_place_of_work">Выбор места работы</string>
    <string name="choosing_country">Выбор страны</string>
    <string name="choosing_region">Выбор региона</string>
    <string name="main">Главная</string>
    <string name="favourites">Избранное</string>
    <string name="team">Команда</string>
    <string name="empty_favorites">Список пуст</string>
    <string name="unable_to_retrieve_job_listing">Не удалось получить\nсписок вакансий</string>
    <string name="enter_query">Введите запрос</string>
    <string name="no_internet">Нет интернета</string>
    <string name="no_such_jobs">Таких вакансий нет</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="team_title">Над приложением работали</string>
    <string name="dev_1">Евгений Ковалевский</string>
    <string name="dev_2">Ольга Румянцева</string>
    <string name="dev_3">Роман Михайлов</string>
    <string name="dev_4">Максим Исаев</string>
    <string name="dev_5">Владислав Доронин</string>
    <string name="salary_from">от %d\u0020</string>
    <string name="salary_to">до %d\u0020</string>
    <string name="salary_not_specified">Зарплата не указана</string>
    <string name="share">Поделиться</string>
    <string name="to_favorites">В избранное</string>
    <string name="employer_logo">Логотип работодателя</string>
    <string name="experience_header">Требуемый опыт</string>
    <string name="description_header">Описание вакансии</string>
    <string name="keyskills_header">Ключевые навыки</string>
    <string name="vacancies_found">Найдено %d вакансий</string>
    <string name="keyskills_separator">"\n• "</string>
    <string name="enter_region">"Введите регион"</string>
    <string name="the_region_does_not_exist">"Такого региона нет"</string>
    <string name="not_get_list">"Не удалось получить\nсписок"</string>
    <string name="not_found_vacancy">Вакансия не найдена или удалена</string>
    <string name="enter_industry">"Введите отрасль"</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="Choose">Выбрать</string>
    <string name="place_of_work">Место работы</string>
    <string name="Industry">Отрасль</string>
    <string name="salary_expected"> Ожидаемая зарплата</string>
    <string name="enter_salary"> Введите сумму</string>
    <string name="without_salary">Не показывать без зарплаты</string>
    <string name="accept">Применить</string>
    <string name="reset">Сбросить</string>
    <string name="check_your_connection">Проверьте подключение к интернету</string>
    <string name="no_such_region">Такого региона нет</string>
    <string name="no_such_industry">Такой отрасли нет</string>
    <string name="filter_place_of_work">%s, %s</string>
</resources>
