<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".presentation.TeamFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:contentInsetStartWithNavigation="0dp"
        app:tint="?attr/colorOnPrimary"
        app:title="@string/team"
        app:titleTextAppearance="@style/TeamFragmentTitleStyle"
        app:titleTextColor="?attr/colorOnPrimary" />

    <FrameLayout
        android:id="@+id/team_title"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:padding="@dimen/dp_16">

        <TextView
            style="@style/TeamFragmentSubTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/team_title"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary" />

    </FrameLayout>

    <LinearLayout
        style="@style/TeamFragmentDevelopersPositionStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TeamFragmentDevelopersTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_1" />
    </LinearLayout>

    <LinearLayout
        style="@style/TeamFragmentDevelopersPositionStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TeamFragmentDevelopersTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_2" />
    </LinearLayout>

    <LinearLayout
        style="@style/TeamFragmentDevelopersPositionStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TeamFragmentDevelopersTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_3" />
    </LinearLayout>

    <LinearLayout
        style="@style/TeamFragmentDevelopersPositionStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TeamFragmentDevelopersTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_4" />
    </LinearLayout>

    <LinearLayout
        style="@style/TeamFragmentDevelopersPositionStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TeamFragmentDevelopersTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_5" />
    </LinearLayout>

</LinearLayout>
